Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
4065
Description
This issue was created by maloo for Chris Gearing <chris@whamcloud.com>
This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/55b88a4c-00f6-11e1-bb4f-52540025f9af.
The sub-test test_3a failed with the following error:
test failed to respond and timed out
Info required for matching: obdfilter-survey 3a
Attachments
Issue Links
- Trackbacks
-
Lustre 2.2.0 mini release testing tracker
Lustre 2.2.0 Mini Release Tag: 2.1.52.0 Build: https://newbuild.whamcloud....
-
Lustre 2.2.0 release testing tracker
Lustre 2.2.0 RC1 Tag: 2.2.0RC1 Build: https://build.whamcloud.com/job/lustreb22/11/ Google doc: https://docs.google.com/a/whamcloud.com/spreadsheet/ccc?key=0AkK5hBTd2cvHdDFsSWt2RlBocE5kdi03OUYtX21ZYkE#gid=3 Lustre 2.2....
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....